# seml

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  docs.md  mongodb.config.example  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: actions.yaml  precommit.yaml  release.yaml  ruff.yaml
ci/examples/: example_config.yaml  example_experiment.py  example_reschedule.py  example_reschedule_config.yaml
examples/: .ruff.toml  README.md  advanced_example_config.yaml  advanced_example_experiment.py  config_check_fails.yaml  example_config.yaml  example_experiment.py  experiment_check_fails.py  file_observer_example.py  file_observer_example.yaml
examples/artifacts/: something
examples/asha_example/: experiment_1.yaml  main.py  model.py
examples/config/: flip_augmentation.yaml
examples/notebooks/: experiment_results.ipynb
examples/tutorial/: example_config.yaml  example_experiment.py  intro_slides.ipynb  intro_slides.slides.html  seml.drawio
scripts/: .pre-commit-config.yaml.template  pre_commit_sync_pyright_deps.py  sync_precommit_dependencies.py
seml/: __init__.py  __main__.py  add.py  check_cancelled.py  config.py  configure.py  database.py  database_utils.py  errors.py  evaluation.py  experiment.py  get_experiment_command.py  json.py  jupyter_template.sh  main.py  manage.py  mattermost_observer.py  misc.py  module_hider.py  network.py  observers.py  parameter_utils.py  parameters.py  prepare_experiment.py  queue_experiments.py  queuing.py  save_job_status.py  seml.py  settings.py  slurm_template.sh  sources.py  start.py  start_experiments.py  track.py  typer.py  utils.py
src/: description.py
src/seml/: __init__.py  __main__.py  add.py  config.py  configure.py  console.py  database.py  description.py  document.py  errors.py  evaluation.py  experiment.py  json.py  manage.py  mattermost_observer.py  module_hider.py  network.py  observers.py  parameters.py  prepare_experiment.py  project.py  settings.py  sources.py  start.py  typer.py  utils.py
src/seml/cli_utils/: __init__.py  cache.py  cli_states.py  typer.py
src/seml/commands/: add.py  configure.py  description.py  manage.py  migration.py  print.py  project.py  slurm.py  sources.py  start.py
src/seml/console/: __init__.py
src/seml/experiment/: __init__.py  command.py  config.py  description.py  experiment.py  mattermost_observer.py  observers.py  parameters.py  sources.py
src/seml/templates/project/default/: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  main.py  pyproject.toml.template
src/seml/templates/project/default/config/data/: big.yaml  small.yaml
src/seml/templates/project/default/config/model/: big.yaml  small.yaml
src/seml/templates/project/default/config/seml/: grid.yaml
src/seml/templates/project/default/notebooks/: visualize_results.ipynb
src/seml/templates/project/default/src/{project_name}/utils/: __init__.py  seed.py
src/seml/templates/project/default/test/: test_function.py
src/seml/templates/slurm/: slurm_template.sh
src/seml/utils/: __init__.py  asha.py  errors.py  io.py  json.py  module_hider.py  multi_process.py  network.py  slurm.py  ssh_forward.py  ssh_tunnel_worker.py  typer.py  yaml.py
test/: .ruff.toml  docs.md  test_config.py  test_ssh_forward.py  test_start.py  test_utils.py
test/resources/config/: config_resolve_config.yaml  config_resolve_config_named_1.json  config_resolve_config_named_1.yaml  config_resolve_config_named_2.json  config_resolve_config_named_2.yaml  config_resolve_with_interpolation.yaml  config_slurm_cpus_per_gpu.yaml  config_slurm_default.yaml  config_slurm_default_empty_sbatch.yaml  config_slurm_experiment.yaml  config_slurm_experiments_and_tasks.yaml  config_slurm_mem_per_cpu.yaml  config_slurm_remove_sentinel.yaml  config_slurm_template.yaml  config_with_all_types.yaml  config_with_bundled_parameters.yaml  config_with_dict_choice.yaml  config_with_duplicate_parameters_2.yaml  config_with_duplicate_parameters_3.yaml  config_with_empty_dictionary.yaml  config_with_grid.yaml  config_with_grouped_parameters.yaml  config_with_named_config.yaml  config_with_parameter_collections.yaml  config_with_parameter_collections_random.yaml  config_with_zipped_parameters.yaml
test/resources/scripts/: experiment_resolve_config.py  experiment_resolve_config_interpolate.py
tests/: test_config.py  test_utils.py
tests/resources/config/: config_nested_parameter_collections.yaml  config_with_duplicate_parameters_1.yaml  config_with_duplicate_random_parameters_1.yaml
