[project]
name = "seml"
version = "0.5.4"
description = "Slurm Experiment Management Library"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Zügner", email = "zuegnerd@in.tum.de" },
    { name = "Johannes Gsteiger", email = "johannes.gasteiger@tum.de" },
    { name = "Nicholas Gao", email = "n.gao@tum.de" },
    { name = "Dominik Fuchsgruber", email = "d.fuchsgruber@tum.de" },
    { name = "DAML Group @ TUM" },
]
maintainers = [
    { name = "Nicholas Gao", email = "n.gao@tum.de" },
    { name = "Dominik Fuchsgruber", email = "d.fuchsgruber@tum.de" },
]
classifiers = ["Programming Language :: Python"]

dependencies = [
    "numpy>=1.15; python_version < '3.13'",
    "numpy>=2.1; python_version >= '3.13'",
    "pymongo>=4.1",
    "pandas>=2.2; python_version < '3.13'",
    "pandas>=2.2.3; python_version >= '3.13'",
    "sacred>=0.8.4",
    "pyyaml>=5.1",
    "jsonpickle>=2.2",
    "munch>=4.0",
    "debugpy>=1.2.1",
    "requests>=2.28.1",
    "typer>=0.12",
    "rich>=13.0,<14.1",
    "click>=8.0",
    "omegaconf>=2.3.0",
    "gitignore_parser>=0.1.11",
    "setuptools>=69.2.0",
    "importlib_resources>=5.7.0",
    "typing_extensions>=4.10; python_version < '3.13'",
    "typing_extensions>=4.12; python_version >= '3.13'",
    "deepdiff>=7.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.1",
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "filelock>=3.15.4",
    "sshtunnel>=0.4.0",
]
ssh_forward = ["sshtunnel>=0.4.0", "filelock>=3.13.3"]

[project.urls]
Homepage = "https://github.com/TUM-DAML/seml"
Documentation = "https://github.com/TUM-DAML/seml/blob/master/docs.md"
Repository = "https://github.com/TUM-DAML/seml"
Changelog = "https://github.com/TUM-DAML/seml/releases/latest"

[project.scripts]
seml = "seml.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "filelock>=3.15.4",
    "sshtunnel>=0.4.0",
    "build>=1.2.1",
    "twine>=5.1.1",
    "backports-tarfile>=1.2.0",
    "tuna>=0.5.11",
]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "standard"
